--- a/style/style.css
+++ b/style/style.css
@@ -30,8 +30,8 @@
 #title {
     width: fit-content;
     padding-top: 10%;
-    margin-left: 50%;
-    transform: translateX(-50%);
+    /* margin-left: 50%; */
+    /* transform: translateX(-50%); */
 }
 
 .poslog {
