--- a/style/style.css
+++ b/style/style.css
@@ -96,6 +96,11 @@ header {
     height: 30px;
 }
 
+.user-pwd-container i {
+    font-size: 1.3em;
+    color: #F2937E;
+}
+
  input:focus {
     box-shadow: 0 0 0 0;
     outline: 0;
