--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,7 @@ header {
     width: fit-content;
     padding-top: 10%;
     color: #0D0D0D;
+    margin-bottom: 20px;
     /* margin-left: 50%; */
     /* transform: translateX(-50%); */
 }
