--- a/style/style.css
+++ b/style/style.css
@@ -118,3 +118,18 @@ header {
 margin: 0 10px;    
 }
 
+/* Profile test */
+.profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+}
+
+
+.profile-container button {
+    display: flex;
+    margin-top: 20px;
+    font-size: 1.5em;
+}
+
