--- a/style/profile.css
+++ b/style/profile.css
@@ -3,22 +3,11 @@
     padding: 0;
 }
 
-.art {
-    width: 320px;
-    height: 280px;
-    background-color: antiquewhite;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #000000;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+
 
 main {
     display: flex;
+    background-color: #F2CDC4;
 
 }
 
@@ -38,6 +27,16 @@ aside {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    background-color: blueviolet;
+    background-color: #F2F2F2;
     margin-bottom: 20px;
+}
+
+.content-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin: auto;
+    
 }
