--- a/style/style.css
+++ b/style/style.css
@@ -1,30 +1,47 @@
 * {
     margin: 0;
     padding: 0;
+
 }
 .body {
     width: 100%;  
-    background-color: #e4d7d4;  
+    background-color: #fff;  
     font-family: 'Fira Sans', sans-serif;
+}
+
+nav {
+    background-color: #bde7f7;
+    border: #bde7f7;
+    border-bottom: #26ade4;
+    border-style:solid
 }
 
 header {
     display: flex;
     justify-content: center;
+    background-color: #fff;
 }
 
 #logo {
-    width: 300px;
+    
+    margin-top: 10vh;
+    width: 400px;
     /* margin-left: 49%; */
     /* transform: translateX(-50%); */
 }
 
+main {
+    display: flex;
+    background-color: fff;
+}
+
 .art {
+    margin-top: 10vh;
     width: 320px;
     height: 280px;
-    background-color: antiquewhite;
+    background-color: #bde7f7;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #000000;
+    box-shadow: 0px 0px 10px 0px #26ade4;
     margin-left: 50%;
     transform: translateX(-50%);
     text-align: center;
@@ -34,28 +51,29 @@ header {
 }
 
 .art-cadastro {
-    height: 520px;
+    height: 470px;
+    /* padding-top: 70px; */
+    margin-bottom: 100px;
+}
+
+.art-edit {
+    height: 360px;
     /* padding-top: 70px; */
     margin-bottom: 100px;
 }
 
 #title {
-    width: fit-content;
-    padding-top: 10%;
-    color: #0D0D0D;
-    margin-bottom: 20px;
+    
+    margin-top: 8%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    color: #f6fcff;
+    background-color: #26ade4;
+    margin-bottom: 8%;
+    width: 90%;
+    border-radius: 8px;
     /* margin-left: 50%; */
     /* transform: translateX(-50%); */
-}
-
-.poslog {
-    width: fit-content;
-    /* margin-left: 16%; */
-}
-
-.pospsw {
-    width: fit-content;
-    /* margin-left: 15.5%; */
 }
 
 .button {
@@ -63,18 +81,22 @@ header {
     border-radius: 8px;
     padding: 5px;
     font-weight: bold;
-    color: #f4eeee;
-    border: 2px solid #F2937E ;
-    background-color: #F2937E;
+    color: #26ade4;
+    border: 1px solid #26ade4 ;
+    background-color: #f6fcff;
     font-size: 1em;
 }
 
 .button:hover {
-    background-color: #F2F2F2;
+    background-color: #26ade4;
     transition: 0.7s;
-    border: 2px solid #F2937E ;
-    color: #F2937E;
+    border: 1px solid #f6fcff ;
+    color: #f6fcff;
 
+}
+
+.input {
+    background-color: #f6fcff;
 }
 
 /* .posbutton {
@@ -83,7 +105,7 @@ header {
 } */
 
 .user-pwd-container {
-    background-color: #fff;
+    background-color: #f6fcff;
     width: 280px;
     height: 30px;
     text-align: center;
@@ -94,7 +116,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid #F2937E;
+    border: 1px solid #26ade4;
 }
 
 .user-pwd-container input {
@@ -106,7 +128,7 @@ header {
 
 .user-pwd-container i {
     font-size: 1.3em;
-    color: #F2937E;
+    color: #26ade4;
 }
 
  input:focus {
@@ -134,3 +156,21 @@ margin: 0 10px;
     font-size: 1.5em;
 }
 
+.content-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin: auto;
+    
+}
+
+.colorarrow {
+    color: #26ade4;
+    font-size: 30px; 
+}
+
+.title {
+    color: #26ade4;
+}
